; ModuleID = '/home/carl/AnghaBench/nanomsg/tests/extr_..srcutilslist.c_nn_list_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tests/extr_..srcutilslist.c_nn_list_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_list = type { i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_list_term(%struct.nn_list* %0) #0 {
  %2 = alloca %struct.nn_list*, align 8
  store %struct.nn_list* %0, %struct.nn_list** %2, align 8
  %3 = load %struct.nn_list*, %struct.nn_list** %2, align 8
  %4 = getelementptr inbounds %struct.nn_list, %struct.nn_list* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp eq i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @nn_assert(i32 %7)
  %9 = load %struct.nn_list*, %struct.nn_list** %2, align 8
  %10 = getelementptr inbounds %struct.nn_list, %struct.nn_list* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @nn_assert(i32 %13)
  ret void
}

declare dso_local i32 @nn_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
